시그널 이름 변경, 도구의 시그널 핸들러 생성

--- a/resource/main_form.ui
+++ b/resource/main_form.ui
@@ -647,12 +647,12 @@
         </layout>
        </item>
        <item>
-        <widget class="QListWidget" name="tools_image_list"/>
+        <widget class="QListWidget" name="tools_img_list"/>
        </item>
        <item>
         <widget class="QPushButton" name="tools_img_remove_button">
          <property name="text">
-          <string>촬영 시작</string>
+          <string>이미지 삭제</string>
          </property>
         </widget>
        </item>
